--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <title>Concentrece</title>
 </head>
-<body>
+<body id="body">
+    <ul class="info">
+        <li class="score">score :</li>
+        <li class="pares">pares :</li>
+        <li class="reset">reiniciar</li>
+    </ul>
     <div id="guia" class="guia">
-
     </div>
    <template id="card">
        <div class="contenedor">
