contadores y tiempo de espera activos

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body id="body">
     <ul class="info">
-        <li class="score">score :</li>
+        <li class="movimientos">movimientos:</li>
+        <li class="pmovimiento"></li>
         <li class="pares">pares :</li>
+        <li class="npares"></li>
         <li class="reset">reiniciar</li>
     </ul>
     <div id="guia" class="guia">
